--- a/TODO.txt
+++ b/TODO.txt
@@ -48,3 +48,4 @@ API
 Development
 ====================================
 - Create a util module and use it (for functions like sentMessageToContent)
+- Communication between brower action and content should only involve a list of public key IDs. Now we send a list of armored texts.
