--- a/TODO.txt
+++ b/TODO.txt
@@ -47,5 +47,4 @@ API
 
 Development
 ====================================
-- Create a util module and use it (for functions like sentMessageToContent)
-- Communication between brower action and content should only involve a list of public key IDs. Now we send a list of armored texts.
+- Create a util module and use it (for functions like sentMessageToContent) ??? (not needed ???)
