--- a/TODO.txt
+++ b/TODO.txt
@@ -29,3 +29,4 @@ API
 Development
 ====================================
 - The background page reports an error when there is a public key in the DOM
+- Use port to communicate from content to background (should be faster). At least to decrypt the links;
