--- a/TODO.txt
+++ b/TODO.txt
@@ -14,6 +14,7 @@ background
 settings
 ====================================
 - do not require name when creating a key
+- lock and invalidate private key in bg page when the private key is removed from the settings
 
 
 installation
