--- a/TODO.txt
+++ b/TODO.txt
@@ -11,7 +11,6 @@ background
 settings
 ====================================
 - do not require name when creating a key
-- lock and invalidate private key in bg page when the private key is removed from the settings
 - need to import and export secret key and address book
 
 
@@ -26,6 +25,6 @@ API
 
 Development
 ====================================
-- The background page reports an error when there is a public key in the DOM
+- The background page reports an error when there is a public key in the DOM (can'r reproduce?)
 - Use port to communicate from content to background (should be faster). At least to decrypt the links;
 - Use chrome.i18n to implement i18n
