--- a/TODO.txt
+++ b/TODO.txt
@@ -29,3 +29,7 @@ Development
 ====================================
 - Use port to communicate from content to background (should be faster). At least to decrypt the links;
 - Use chrome.i18n to implement i18n
+
+Testing
+===================================
+Send a browser message when the content script is done decoding. This way you can run tests on that message.
