--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,7 @@ browser
 ==================================
 - show "please wait" when the private key is being unlocked
 - do not allow anything unless there is an active editable
+- if the key looked up has multiple user ids, they all show in the drowpdown as the primary id
 
 content
 ==================================
