--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,6 @@
 browser
 ==================================
 - show "please wait" when the private key is being unlocked
-- when there is no text in the editable, show "No text entered" with a link "Add text" that shows the text box. This way the focus will be on "Share pub key" button
 - add message expiration. Expire messages.
 - BUG: backspace deletes a bead with the last letter of the text
 - BUG: special symbols like '\' in the filter result in error "Uncaught SyntaxError: Invalid regular expression: /\/: \ at end of pattern"
@@ -9,6 +8,7 @@ browser
 content
 ==================================
 - on install the content script should prompt the tab to get reloaded, so it takes the new code
+- think about a more general SLP url scheme, so it can scale with other urls
 
 background
 ==================================
