--- a/TODO.txt
+++ b/TODO.txt
@@ -31,6 +31,7 @@ API
 
 Development
 ====================================
+- Add a special type for Magic URL
 - Use port to communicate from content to background (should be faster). At least to decrypt the links;
 - Use chrome.i18n to implement i18n
 
