--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,6 @@
 browser
 ==================================
 - show "please wait" when the private key is being unlocked
-- BUG: backspace deletes a bead with the last letter of the text
-- BUG: special symbols like '\' in the filter result in error "Uncaught SyntaxError: Invalid regular expression: /\/: \ at end of pattern"
 
 content
 ==================================
@@ -32,4 +30,4 @@ Development
 
 Testing
 ===================================
-Send a browser message when the content script is done decoding. This way you can run tests on that message.
+Rethink the name and content of the message that gets sent when the encoding is over
