--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,7 @@ browser
 
 content
 ==================================
+- BUG: Restore original message does not work on Facebook (possibly others)
 - add timeout to expire messages in the DOM
 - on install the content script should prompt the tab to get reloaded, so it takes the new code
 - think about a more general SLP url scheme, so it can scale with other urls
